fix layout issue

--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,7 @@
+:root {
+  --base-padding: 5px;
+}
+
 h3 {
   border-bottom: 1px solid #3f3f3f41;
 }
@@ -7,7 +11,7 @@ h3 {
   justify-content: center;
   align-items: center;
   flex-direction: column;
-  height: 100vh;
+  height: 100%;
   background-color: #e5e7e941;
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
@@ -16,6 +20,7 @@ h3 {
   width: 40vw;
   min-width: 200px;
   border-radius: 0.3rem;
+  padding: var(--base-padding);
 }
 
 @media only screen and (max-width: 600px) {
@@ -57,6 +62,8 @@ h3 {
 
 ul {
   padding: 0;
+  max-height: 600px;
+  overflow-y: auto;
 }
 
 li {
